# ssmm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md
.claude/skills/ssmm/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: app.rs  cli.rs  config.rs  env_map.rs  main.rs  ssm.rs  systemd.rs  util.rs
src/commands/: check.rs  delete.rs  dirs.rs  exec.rs  list.rs  migrate.rs  migrate_to_exec.rs  mod.rs  onboard.rs  put.rs  show.rs  sync.rs  tag.rs
