[package]
name = "ssmm"
version = "0.1.0"
edition = "2024"
description = "AWS SSM Parameter Store helper for amu-revo team"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
