[package]
name = "ssmm"
version = "0.1.0"
edition = "2024"
description = "AWS SSM Parameter Store helper for team-scoped .env sync (systemd friendly)"
license = "MIT"
repository = "https://github.com/dmm-com/ssmm"
homepage = "https://github.com/dmm-com/ssmm"
readme = "README.md"
keywords = ["aws", "ssm", "parameter-store", "dotenv", "systemd"]
categories = ["command-line-utilities", "config"]

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
futures = "0.3"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
